--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <section>
     <a href="http://www.thismanslife.co.uk" target="_blank">AWESOME THINGS</a>
-<h1 style="text-align: center;color: darkgoldenrod;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Created using html,css</h1>
+<h1 style="text-align: center;color: darkgoldenrod;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Created using Html,css</h1>
 </section>
 </body>
 </html>
